<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <TextView
        android:id="@+id/user_main_page_wellcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wellcome_user_page"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    <Button
        android:id="@+id/user_main_page_feedback_manage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/buttonBarButtonStyle"
        android:text="@string/button_feedback_manage" />
    <EditText
        android:id="@+id/user_main_page_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_user_requestDetail"
        android:lines="6" />
    <Button
        android:id="@+id/user_main_page_button_request"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_request" />
</LinearLayout>