<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="top">
	    <TextView
	        android:id="@+id/login_userNameLabel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/wellcome_login" />
	
	    <EditText
	        android:id="@+id/login_userName"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:hint="@string/text_user_username"
	        android:inputType="text" />
	
	    <EditText
	        android:id="@+id/login_password"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:hint="@string/text_user_password"
	        android:inputType="textPassword" />
	</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:layout_weight="0"
        android:orientation="horizontal">
        <Button
            android:id="@+id/login_button_save"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="left"
            android:text="@string/button_Save" />
        <Button
            android:id="@+id/login_button_cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="right"
            android:text="@string/button_Cancel" />
    </LinearLayout>
</LinearLayout>