<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"  >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="top">
	    <TextView
	        android:id="@+id/feedbackForm_userName"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/wellcome_feedbackForm"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	    <RatingBar
	        android:id="@+id/feedbackForm_rating"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" />
	    <EditText
	        android:id="@+id/feedbackForm_commentText"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:hint="@string/text_user_comment"
	        android:inputType="textMultiLine"
	        android:lines="6" >
	        <requestFocus />
	    </EditText>
	</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:layout_weight="0"
        android:orientation="horizontal">

        <Button
            android:id="@+id/feedbackForm_button_ok"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/button_Save" />

    </LinearLayout>
</LinearLayout>